docs/i18n/ko/docusaurus-plugin-content-docs/version-4.0.0-beta.3/api/Viewport.mdx
import Translate, {translate} from '@docusaurus/Translate';



```ts
class Viewport
```
뷰포트 크기 정보를 담당하는 컴포넌트

<div className="container">
    <div className="row mb-2"><div className="col col--6"><strong>Properties</strong></div><div className="col col--6"><strong>Methods</strong></div></div>
    <div className="row"><div className="col col--6"><a href="#element">element</a><br/><a href="#width">width</a><br/><a href="#height">height</a></div><div className="col col--6"><a href="#setSize">setSize</a><br/><a href="#resize">resize</a></div></div>
  </div>

## Constructor
```ts
new Viewport(el)
```
|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|el|HTMLElement|no||뷰포트 엘리먼트|


## Properties

### element {#element}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

뷰포트(root) 엘리먼트

**Type**: HTMLElement
















### width {#width}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

뷰포트 너비

**Type**: number
















### height {#height}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

뷰포트 높이

**Type**: number
















## Methods

### setSize {#setSize}

<div className="bulma-tags">




</div>

뷰포트 크기를 변경합니다.
`.flicking-viewport` 엘리먼트에 해당 크기의 CSS width/height를 적용합니다









|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|size|object|yes||새 뷰포트 크기|
|size.width|number \| string|yes||CSS 문자열 또는 숫자(px)|
|size.height|number \| string|yes||CSS 문자열 또는 숫자(px)|








### resize {#resize}

<div className="bulma-tags">




</div>

현재 뷰포트 엘리먼트의 크기로 너비/높이를 업데이트합니다



















