docs/i18n/ko/docusaurus-plugin-content-docs/version-4.8.0/api/Viewport.mdx
---
custom_edit_url: null
---

```ts
class Viewport
```

<div>

</div>

뷰포트 크기 정보를 담당하는 컴포넌트

<div className="container">
  <div className="row mb-2"><div className="col col--6"><strong>Properties</strong></div><div className="col col--6"><strong>Methods</strong></div></div>
  <div className="row"><div className="col col--6"><a href="#element">element</a><br/><a href="#width">width</a><br/><a href="#height">height</a><br/><a href="#padding">padding</a></div><div className="col col--6"><a href="#setSize">setSize</a><br/><a href="#resize">resize</a></div></div>
</div>

## constructor
```ts
new Viewport(el)
```

<div>

</div>

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|el|HTMLElement|||뷰포트 엘리먼트|

## Properties

### element {#element}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

뷰포트(root) 엘리먼트

**Type**: HTMLElement

### width {#width}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

뷰포트 너비

**Type**: number

### height {#height}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

뷰포트 높이

**Type**: number

### padding {#padding}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

뷰포트 CSS padding 값

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|left|number|CSS `padding-left`|
|right|number|CSS `padding-right`|
|top|number|CSS `padding-top`|
|bottom|number|CSS `padding-bottom`|

## Methods

### setSize {#setSize}

<div>

</div>

뷰포트 크기를 변경합니다.<br />`.flicking-viewport` 엘리먼트에 해당 크기의 CSS width/height를 적용합니다

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|size|object|✔️||새 뷰포트 크기|
|size.width|number \| string|✔️||CSS 문자열 또는 숫자(px)|
|size.height|number \| string|✔️||CSS 문자열 또는 숫자(px)|

### resize {#resize}

<div>

</div>

현재 뷰포트 엘리먼트의 크기로 너비/높이를 업데이트합니다

